--- a/src/ugd_frontend/src/components/CardCreationPanel/cardCreationpanel.css
+++ b/src/ugd_frontend/src/components/CardCreationPanel/cardCreationpanel.css
@@ -4,7 +4,7 @@
   display: flex;
   align-items: flex-start;
   justify-content: space-between;
-  background: #f6f7fb;
+  /* background: #f6f7fb; */
 }
 
 .innerCardCreationPanel {
@@ -76,12 +76,12 @@
   place-items: flex-start;
   max-height: 0px;
   overflow: hidden;
-  transition: 0.5s linear;
+  transition: 0.2s linear;
 }
 
 .cardCreationPanel_InnerContainer.active {
   max-height: 1500px;
-  transition: 0.5s linear;
+  transition: 0.2s linear;
   overflow: unset;
 }
 /* ------------------------------------------ SELECTED CARDS -------------------------- */
@@ -330,7 +330,7 @@
 
 .mainPreviewCardsContainer {
   width: 100%;
-  background: #f6f7fb;
+  /* background: #f6f7fb; */
   padding-top: 50px;
 }
 
@@ -351,7 +351,7 @@
 }
 
 .previewContainerHeader h2 {
-  font-size: 1.4rem;
+  font-size: 1.8rem;
   font-weight: 600;
   color: #000;
 }
