--- a/src/ugd_frontend/src/components/AuthorCards/authorcards.css
+++ b/src/ugd_frontend/src/components/AuthorCards/authorcards.css
@@ -47,7 +47,11 @@
 .favouriteButton {
   position: absolute;
   top: 10px;
-  right: 15px;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0px 15px;
 }
 
 .favouriteButton button {
@@ -58,6 +62,10 @@
   align-items: center;
   justify-content: center;
   border-radius: 50%;
+}
+
+.favouriteButton button:nth-child(1) {
+  cursor: grab;
 }
 
 .AuthorCardImage img {
