Login / Logout Updates and All Bookmarks Done

--- a/src/ugd_frontend/src/components/CardCreationPanel/cardCreationpanel.css
+++ b/src/ugd_frontend/src/components/CardCreationPanel/cardCreationpanel.css
@@ -326,6 +326,12 @@
   color: #fff;
 }
 
+.showSerachedCardsActionBtns label:last-child.active {
+  border-color: #00b5ad;
+  background: #00b5ad;
+  color: #fff;
+}
+
 /* ------------------------------------- PREVIEW CARDS -------------------------- */
 
 .mainPreviewCardsContainer {
