--- a/src/ucg_frontend/src/features/swap/style.css
+++ b/src/ucg_frontend/src/features/swap/style.css
@@ -60,7 +60,7 @@
     transform: translateX(-50%);
 }
 .account-container{
-    max-width: 1000px;
+    max-width: 90%;
     margin: 60px auto;
     padding: 30px 30px;
     border-radius: 30px;
@@ -70,4 +70,11 @@
 .account-container .subaccount-wrapper{
     font-size: 20px;
     line-height: 1.3;
+}
+
+.balance-wrapper .address{
+    padding: 5px 10px;
+    /* background-color: grey; */
+    border-radius: 10px;
+    font-size: 18px;
 }
