--- a/src/alex_frontend/src/features/swap/style.css
+++ b/src/alex_frontend/src/features/swap/style.css
@@ -78,3 +78,9 @@
     border-radius: 10px;
     font-size: 18px;
 }
+
+/* new swap css */
+.white-auth-btn svg, .white-auth-btn span{
+    /* fill: #ffffff; */
+    color: #ffffff;
+}
