--- a/src/alex_frontend/public/css/index.css
+++ b/src/alex_frontend/public/css/index.css
@@ -4,7 +4,7 @@ html, body, #root {
 }
 
 body {
-  font-family: "Times New Roman", Times, serif;
+  font-family: "Syne", sans-serif;
   font-size: 1.5rem;
 }
 
