--- a/src/alex_frontend/src/styles/main.css
+++ b/src/alex_frontend/src/styles/main.css
@@ -1,10 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Syne:wght@400..800&display=swap');
 /*
 ! tailwindcss v3.3.3 | MIT License | https://tailwindcss.com
 */ /*
 1. Prevent padding and border from affecting element width. (https://github.com/mozdevs/cssremedy/issues/4)
 2. Allow adding a border to an element by just adding a border-width. (https://github.com/tailwindcss/tailwindcss/pull/116)
 */
-
 * {
   margin: 0px;
   padding: 0px;
