--- a/src/alex_frontend/src/styles/tailwind.css
+++ b/src/alex_frontend/src/styles/tailwind.css
@@ -25,16 +25,25 @@
     --card-foreground: 222.2 47.4% 11.2%;
 
     --primary: 222.2 47.4% 11.2%;
-    --primary-foreground: 210 40% 98%;
+    --primary-foreground: 59 94% 58%;
 
     --secondary: 210 40% 96.1%;
     --secondary-foreground: 222.2 47.4% 11.2%;
+
+    --info: 188 77% 41%;
+    --info-foreground: 0 0% 100%;
+
+    --warning: 45 100% 51%;
+    --warning-foreground: 0 0% 0%;
 
     --accent: 210 40% 96.1%;
     --accent-foreground: 222.2 47.4% 11.2%;
 
     --destructive: 0 100% 50%;
     --destructive-foreground: 210 40% 98%;
+
+    --constructive: 120 61% 50%;
+    --constructive-foreground: 0 0% 100%;
 
     --ring: 215 20.2% 65.1%;
 
@@ -60,11 +69,20 @@
     --card: 224 71% 4%;
     --card-foreground: 213 31% 91%;
 
-    --primary: 210 40% 98%;
-    --primary-foreground: 222.2 47.4% 1.2%;
+    --primary: 55 80% 55%;
+    --primary-foreground: 222.2 47.4% 11.2%;
 
     --secondary: 222.2 47.4% 11.2%;
     --secondary-foreground: 210 40% 98%;
+
+    --info: 188 77% 41%;
+    --info-foreground: 0 0% 100%;
+
+    --warning: 45 100% 51%;
+    --warning-foreground: 0 0% 0%;
+
+    --constructive: 142 71% 45%;
+    --constructive-foreground: 0 0% 100%;
 
     --destructive: 0 63% 31%;
     --destructive-foreground: 210 40% 98%;
