--- a/src/alex_frontend/src/styles/style.css
+++ b/src/alex_frontend/src/styles/style.css
@@ -45,3 +45,8 @@
 body {
     font-family: 'Syne';
 }
+input[type="number"] {
+    -moz-appearance: textfield; /* For Firefox */
+    -webkit-appearance: none; /* For Chrome and Safari */
+    appearance: none; /* Standard property */
+  }
