--- a/src/alex_frontend/src/styles/tailwind.css
+++ b/src/alex_frontend/src/styles/tailwind.css
@@ -52,7 +52,8 @@
   }
 
   .dark {
-    --background: 224 71% 4%;
+    /* --background: 224 71% 4%; */
+    --background: 30 10% 10%;
     --foreground: 213 31% 91%;
 
     --muted: 223 47% 11%;
