--- a/src/alex_frontend/src/styles/tailwind.css
+++ b/src/alex_frontend/src/styles/tailwind.css
@@ -12,6 +12,7 @@
   :root {
     --background: 0 0% 100%;
     --foreground: 222.2 47.4% 11.2%;
+    --brightyellow: #F6F930;
 
     --muted: 210 40% 96.1%;
     --muted-foreground: 215.4 16.3% 46.9%;
@@ -31,7 +32,7 @@
     --secondary: 210 40% 96.1%;
     --secondary-foreground: 222.2 47.4% 11.2%;
 
-    --info: 188 77% 41%;
+    --info: 15 70% 45%;
     --info-foreground: 0 0% 100%;
 
     --warning: 45 100% 51%;
@@ -52,21 +53,18 @@
   }
 
   .dark {
-    /* --background: 224 71% 4%; */
     --background: 30 10% 10%;
     --foreground: 213 31% 91%;
+    --brightyellow: #F6F930;
 
-    --muted: 223 47% 11%;
+    --muted: 30 20% 20%;
     --muted-foreground: 215.4 16.3% 56.9%;
 
-    --accent: 216 34% 17%;
-    --accent-foreground: 210 40% 98%;
+    --accent: 10 35% 20%;
+    --accent-foreground: 55 80% 55%;
 
-    --popover: 224 71% 4%;
-    --popover-foreground: 215 20.2% 65.1%;
-
-    --border: 216 34% 30%;
-    --input: 216 34% 17%;
+    --border: 15 30% 30%;
+    --input: 25 25% 15%;
 
     --card: 224 71% 4%;
     --card-foreground: 213 31% 91%;
@@ -77,7 +75,7 @@
     --secondary: 222.2 47.4% 11.2%;
     --secondary-foreground: 210 40% 98%;
 
-    --info: 188 77% 41%;
+    --info: 5 60% 45%;
     --info-foreground: 0 0% 100%;
 
     --warning: 45 100% 51%;
@@ -89,7 +87,7 @@
     --destructive: 0 63% 31%;
     --destructive-foreground: 210 40% 98%;
 
-    --ring: 216 34% 17%;
+    --ring: 10 35% 20%;
 
     --radius: 0.5rem;
   }
