modals & mobile responsive

--- a/src/alex_frontend/src/styles/style.css
+++ b/src/alex_frontend/src/styles/style.css
@@ -43,9 +43,10 @@
     font-display: swap;
 }
 body {
-    font-family: 'Syne';
+    font-family: 'Syne' !important;
 }
 
 .wallet-adapter-modal{
     pointer-events: auto;
 }
+.font-roboto-condensed{font-family: unset !important;}
