--- a/src/alex_frontend/src/apps/app/Emporium/component/style.css
+++ b/src/alex_frontend/src/apps/app/Emporium/component/style.css
@@ -13,10 +13,18 @@
   }
   .custom-modal, .custom-modal .flex.items-center.justify-center{width: 360px;height:360px;margin: 0 auto 20px;}
   .custom-modal img {
-    /* max-height: 60% !important; */
     width: 100%;
     height: 100%;
     object-fit: contain;
+}
+@media (max-width:1024px) {
+  .custom-modal, .custom-modal .flex.items-center.justify-center{width: 250px;height:250px;margin: 0 auto 20px;}
+}
+@media (max-width:767px) {
+  .custom-modal, .custom-modal .flex.items-center.justify-center{width: 200px;height:200px;margin: 0 auto 20px;}
+}
+@media (max-width:640px) {
+  .custom-modal, .custom-modal .flex.items-center.justify-center{width: 180px;height:180px;margin: 0 auto 20px;}
 }
   
 
