emporium app restructure functionality and components flow, nfts,listings and marketplace.

--- a/src/alex_frontend/src/styles/style.css
+++ b/src/alex_frontend/src/styles/style.css
@@ -49,4 +49,4 @@ body {
 .wallet-adapter-modal{
     pointer-events: auto;
 }
-.font-roboto-condensed{font-family: unset !important;}
+/* .font-roboto-condensed{font-family: unset !important;} */
